tests/baselines/reference/parserMemberAccessor1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessor1.ts (1 errors) ====
    class C {
      get foo() { }
          ~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
      set foo(a) { }
    }